# Autofill

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.slurm
config/: pair_vae.yaml  vae_les.yaml  vae_saxs.yaml
config/.ipynb_checkpoints/: vae_les-checkpoint.yaml  vae_saxs-checkpoint.yaml
docs/: api.rst  conf.py  configuration.rst  data_formats.rst  deep_learning_notes.rst  getting_started.rst  index.rst  tutorials.rst
docs/api/: callbacks.rst  datasets.rst  index.rst  models.rst  package.rst  training.rst  vae.rst
script/: 02_txtTOhdf5.py  03_train.py  05_infer.py  06_val_metrics.py
scripts/: 01_csv_pre_process.py  02_txtTOhdf5.py  03_train.py  04_pair_txtTOhdf5.py  04_prepare_pairdataset.py  05_infer.py  06_val_metrics.py  saminitycheck.py
scripts/utils/: H5_check.py  __init__.py  analyze_data.py  config_validator.py  fit_cyl_Ag.py  merge_h5.py  saminitycheck.py  training_config_validator.py
src/: logging_utils.py
src/autofill.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dataset/: datasetH5.py  datasetPairH5.py  datasetTXT.py  generateSaxs.py  h5Toh5GoodStructure.py  transformations.py  utils.py
src/model/: configs.py  grid_search.py  inferencer.py  trainer.py
src/model/callbacks/: inference_callback.py  metrics_callback.py
src/model/pairvae/: configs.py  loss.py  pairvae.py  pl_pairvae.py  scheduler.py
src/model/vae/: configs.py  pl_vae.py
src/model/vae/submodel/: ResVAE.py  ResVAEBN.py  VAE.py  registry.py
src/validation/: __init__.py  engine.py  metrics.py
src/validation/utils/: fit_cyl_Ag.py  utils.py
