[project]
name = "autofill"
version = "0.1.0"
description = "AutoFill - VAE-based model for data reconstruction and analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.13.0",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "mlflow>=2.22.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "torch>=2.7.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "tqdm>=4.67.1",
    "uniqpath==0.1.3",
    # Additional dependencies from requirements.txt and code analysis
    "scipy>=1.15.3",
    "scikit-learn>=1.6.1",
    "requests>=2.32.3",
    "pillow>=11.2.1",
    "setuptools>=80.7.1",
    "packaging>=24.2",
    "fsspec>=2025.3.2",
    "gitpython>=3.1.44",
    "jinja2>=3.1.6",
    "joblib>=1.5.0",
    "networkx>=3.4.2",
    "sqlalchemy>=2.0.41",
    "typing-extensions>=4.13.2",
    "sympy>=1.14.0",
    "triton>=3.3.0",
    "fonttools>=4.58.0",
    "kiwisolver>=1.4.8",
    "markupsafe>=3.0.2",
    "pytz>=2025.2",
    "rsa>=4.9.1",
    "six>=1.17.0",
    "threadpoolctl>=3.6.0",
    "tzdata>=2025.2",
    # SASFit dependencies for physical modeling
    "lmfit>=1.2.0",
    "sasmodels>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
