[project]
name = "autofill"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.13.0",
    "lightning>=2.5.1.post0",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.3",
    "mlflow>=2.22.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "sasmodels>=1.0.11",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "uniqpath==0.1.3",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
