[project]
name = "autofill"
version = "0.1.0"
description = "Toolbox for preprocessing, training and evaluating VAE/PairVAE models to complete SAXS and LES signals. See README.md for usage and documentation."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }

authors = [
  { name = "Julien Rabault", email = "julien.rabault@irit.fr" },
  { name = "Caroline de Pourtal\u00e8s", email = "caroline.de-pourtales@irit.fr" },
]

keywords = ["vae", "pairvae", "saxs", "les", "autofill", "machine-learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "h5py>=3.13.0",
    "lightning>=2.5.1.post0",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.3",
    "mlflow>=2.22.0,<3.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "sasmodels>=1.0.11",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "uniqpath==0.1.3",
]

[project.optional-dependencies]
docs = [
  "sphinx>=5.1.0",
  "sphinx-rtd-theme>=1.2.0",
  "myst-parser>=0.18.0",
]

dev = [
  "pytest>=7.0",
  "pytest-cov",
  "black>=23.0",
  "isort>=5.0",
  "ruff>=0.14.1,<0.15",
]

test = [
  "pytest>=7.0",
]

# Keep custom uv index for PyTorch wheels (existing project file referenced this)
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
